--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "pug -w index.pug",
-    "build": "pug index.pug && node inlineCss.js",
+    "dev": "pug -w -O data.json index.pug",
+    "build": "pug -O data.json index.pug && node inlineCss.js",
     "generate": "node inlineCss.js"
   },
   "repository": {
