--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "prettier.htmlWhitespaceSensitivity": "ignore",
   "bracketSameLine": true,
   "jsxBracketSameLine": true,
-  "singleAttributePerLine": false
+  "singleAttributePerLine": false,
+  "proseWrap": "never"
 }
